Update del dockerfile

--- a/backend-service/Dockerfile
+++ b/backend-service/Dockerfile
@@ -16,6 +16,9 @@ COPY . .
 # Compilar el código TypeScript a JavaScript
 RUN npm run build
 
+# Verificar que la carpeta dist/ fue generada
+RUN ls -la dist
+
 # Exponer el puerto en el que el backend se ejecutará
 EXPOSE 5000
 
