--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: backend-service
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -36,14 +40,17 @@ jobs:
       - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/backend-service:latest
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.3
+      - name: Add SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          host: ${{ secrets.PRODUCTION_EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.PRODUCTION_EC2_HOST }} << 'EOF'
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend-service:latest
             docker stop backend-service || true
             docker rm backend-service || true
-            docker run --name backend-service --network demo-always-friday-network -p 5000:5000 -d ${{ secrets.DOCKER_USERNAME }}/backend-service
+            docker run --name backend-service --network demo-always-friday-network -p 5000:5000 -d ${{ secrets.DOCKER_USERNAME }}/backend-service:latest
+          EOF
